# rustyboy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: bits.rs  bus.rs  cartridge.rs  cycles.rs  display.rs  interrupts.rs  joypad.rs  lib.rs  memory.rs  screen.rs  serial.rs  tests.rs  timer.rs
core/src/cpu/: alu.rs  ime.rs  interrupts.rs  mod.rs  opcode.rs  registers.rs
core/src/cpu/alu/: mod.rs
core/src/gpu/: mod.rs  oam.rs  palettes.rs  tiles.rs  vram.rs
core/src/mbc/: mbc1.rs  mod.rs  rom_only.rs
core/src/memory/: ioregisters.rs  mod.rs
desktop/: Cargo.toml
desktop/src/: emulator.rs  main.rs
gbdoctor/: Cargo.toml  README.md
gbdoctor/src/: main.rs
macroquad/: Cargo.toml  README.md
macroquad/src/: desktop.rs  display.rs  main.rs  screen.rs  web.rs
macroquad/www/: index.html  script.js  style.css
src/: bits.rs  main.rs
src/cpu/: alu.rs  ime.rs  interrupts.rs  mod.rs  opcode.rs  registers.rs  tests.rs
src/cpu/alu/: mod.rs  tests.rs
src/gb/: mod.rs  tests.rs  timer.rs
src/gb/cpu/: mod.rs
src/gb/cpu/alu/: tests.rs
src/gb/mbc/: mod.rs
src/gb/memory/: ioregisters.rs  mod.rs
src/mbc/: mod.rs  rom_only.rs
src/memory/: ioregisters.rs  mbc.rs  mod.rs
terminal/: Cargo.toml
terminal/src/: main.rs
web/: Cargo.toml
wgpu/: Cargo.toml
wgpu/src/: desktop.rs  emulator.rs  main.rs  web.rs
