[package]
name = "rustyboy_macroquad"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyboy_core = { path = "../core" }
macroquad = "0.3.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.5"
