[package]
name = "rustyboy_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyboy_core = { path = "../core" }
pixels = "0.12.1"
winit = "0.28.5"
rfd = "0.11.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = "0.2.86"
console_error_panic_hook = "0.1.7"
web-sys = "0.3.63"
js-sys = "0.3.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.4"
env_logger = "0.10.0"
clap = { version = "4.2.7", features = ["derive"] }
